manifests/ingestion-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingestion
  namespace: vivek
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingestion
  template:
    metadata:
      labels:
        app: ingestion
    spec:
      containers:
      - name: ingestion
        image: clusteraliregistry.azurecr.io/axion-ingestion:v3
        ports:
        - containerPort: 8000
