manifests/ingestion-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: ingestion-service
  namespace: vivek
spec:
  selector:
    app: ingestion
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
