manifests/ingestion-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingestion-myingress

spec:
  ingressClassName: nginx
  rules:
  - host: ingestion-service.kulphi.shop
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ingestion-service
            port: 
              number: 80
